--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "matplotlib>=3.10.3",
+    "nbformat>=5.10.4",
     "numpy>=2.2.5",
     "pandas>=2.2.3",
     "plotly>=6.1.0",
